@@ -128,6 +128,20 @@ int add(int x, int y) __attribute__((cog))
 ```
 Similarly use `__attribute__((lut))` to place the function into LUT memory.
 
+## Functions expanded inline
+
+### Small functions
+
+Small functions are expanded inline (without a function call) if the `-Oinline-small` optimization is specified. This option is enabled at `-O1` and `-O2`. In this case "small" means just a few assembly language instructions are generated for it (2 instructions for P1, 4 instructions for P2 where memory is not quite so constrained).
+
+### Forcing a function to be inline
+
+If a function should be inlined more aggressively, add the `inline` attribute to it (via a `{++inline}` comment after the `PUB` in Spin/Spin2, a `for "inline"` specifier after `function` in BASIC, or with `inline` or `__attribute__(inline)` in C. This will raise the threshold for when it is inlined from just a few instructions to fewer than 100. Note that the `-Oinline-small` option still must be enabled, although this is the default unless optimization is turned off.
+
+### Inline functions in bytecode
+
+At the present time neither of the bytecode compilers (P1 ROM or P2 nucode) supports inlining of functions.
+
 ## Interrupt Service Routines
 
 The code generated by FlexSpin is *not* interrupt safe, so it is not possible to run interrupt service routines (ISRs) in the same COG as compiled code. ISRs may, of course, run in COGs that contain only PASM code launched by `coginit`.
@@ -308,7 +322,7 @@ The if statement and call to `foo` are removed since the condition is always fal
 
 ### Small Method inlining (-O1, -Oinline-small)
 
-Very small methods are expanded inline. This may be prevented by declaring the method with the "noinline" attribute.
+Very small methods (ones that only generate up to 4 instructions) are expanded inline. This may be prevented by declaring the method with the "noinline" attribute. Note that if this optimization is enabled, then methods declared with the "inline" attribute will be expanded inline even if they are not "small" (that is, the "inline" attribute increases the threshold from 4 instructions to 100 instructions).
 
 ### Register optimization (-O1, -Oregs)
 
@@ -368,7 +382,7 @@ Enables some miscellaneous optimizations that are new and hence slightly less we
 
 ### Single Use Method inlining (-O2, -Oinline-single)
 
-If a method is called only once in a whole program, it is expanded inline at the call site.
+If a method is called only once in a whole program, it is expanded inline at the call site, even if it is a fairly large method.
 
 ### Common Subexpression Elimination (-O2, -Ocse)
 
